# chess-autoresearch

./: .gitignore  Cargo.toml  README.md  analysis.ipynb  engine.py  eval_harness.py  play.py  program.md  pyproject.toml  replay.html  server.py
src/: lib.rs
